src/test/resources/preludeCheck/circularInheritance.out
error: Circular inheritance is forbidden
--> C:\Users\chaos\IdeaProjects\CASC\build\resources\test\preludeCheck\circularInheritance\ClassA.casc:3:14
2 |
3 | impl ClassA : ClassB
                  ^^^^^^= hint: Class ClassA inherits class ClassB but class ClassB also inherits class ClassA
error: Circular inheritance is forbidden
--> C:\Users\chaos\IdeaProjects\CASC\build\resources\test\preludeCheck\circularInheritance\ClassB.casc:3:14
2 |
3 | impl ClassB : ClassA
                  ^^^^^^= hint: Class ClassB inherits class ClassA but class ClassA also inherits class ClassB